Added WebSocket to this

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.jackson.serialization.fail-on-empty-beans = false
 
+spring.application.name = notification-service
 server.port = 8082
+ribbon.eureka.enabled = false
